data/all_generated_tests/raw_wast_tests/call_TypeMismatchinControlFlowInstructions_3704.wast
;; 3. **Test 3: Call with Missing Arguments**:    - **Test Description**: Call a function that requires two parameters while only providing one.    - **Constraint**: Verifies that the required number of arguments is enforced.    - **Type Mismatch**: A missing argument should cause an error due to incorrect function signature matching.

(assert_invalid
  (module
    (func $call-with-missing-arguments (call 0 (i32.const 42)))
    (func (param i32 i32))
  )
  "type mismatch"
)